Loading banner & text baseline alignment fix

--- a/chrome/style.css
+++ b/chrome/style.css
@@ -62,6 +62,7 @@
     left: 0;
     padding: 3px 5px 3px 5px;
     overflow: auto;
+    margin-top: 3px;
 }
 #g2tPopup .g2tMain {
     /* Using flex layout to split the main content in to two rows. The Flex layout also allows the 
@@ -103,6 +104,8 @@
     max-height: 96px;
     width: 100%;
     overflow: auto;
+    padding-top: 2px;
+    align-items: flex-start;
 }
 #g2tPopup #g2tMembers,
 #g2tPopup #g2tAttachments,
@@ -188,6 +191,11 @@
 /* Error styles */
 #g2tPopup .popupMsg #error {
     font-weight: bold;
+}
+#g2tPopup #initialLoadingMsg {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
 }
 
 #g2tPopup .popupMsg #error dt {
@@ -346,9 +354,13 @@
     margin-bottom: 2px;
 }
 
-#g2tPopup .placeholder-label{
-    position: absolute;
-    left:0;
+#g2tPopup .placeholder-label {
+    margin: 6px 0 !important;
+    position: static;
+    display: flex;
+    align-items: center;
+    min-width: 29%;
+    display: none;
 }
 #g2tPopup .g2tFormGroup {
     margin: 0 0px 6px 4px;
@@ -386,9 +398,13 @@
     margin-top: 0;
 }
 #g2tPopup .first-row .g2tFormLabel {
-    padding-top: 3px;
+    padding-top: 1px;
     padding-bottom: 0;
 }
+#g2tPopup .first-row .g2tFormControl {
+    min-height: 29px;
+}
+
 #g2tPopup .first-row select {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
@@ -396,7 +412,10 @@
     display: none;
 }
 #g2tPopup .g2tFormControl {
-    margin-top: 3px;
+    margin-top: 0;
+}
+#g2tPopup .labels-row {
+    margin-bottom: 2px;
 }
 
 #g2tPopup .memberLabel {
@@ -404,6 +423,14 @@
     padding: 0 !important;
     margin: 0 4px 0 0 !important;
     justify-content: flex-end;
+}
+#g2tPopup .memberLabel + .g2tFormControl #g2tLabels {
+    min-height: 35px;
+    padding-top: 5px;
+}
+#g2tPopup .memberLabel + .g2tFormControl #g2tMembers {
+    min-height: 37px;
+    padding-top: 1px;
 }
 
 #g2tPopup #g2tLabel button:hover,
@@ -483,6 +510,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 12px;
+}
+#g2tPopup #g2tAttachments {
+    margin-top: 2px;
 }
 
 /* Adjusting the text's width inside the form control. */
